--- a/config.json
+++ b/config.json
@@ -6,11 +6,12 @@
     "scan_recursively": true,
     "title_length_limit": 50,
     "log_file_path": "/mnt/user/media/tubearchivist/renamed_files.log",
+    "destination_folder": "",  // Defaults to "processed_files" if left empty
     "wait_timer": 10,
     "schedule": "",
     "max_retries": 3,
     "retry_delay": 5,
-    "filename_pattern": "{title}.mp4",
+    "filename_pattern": "{title} - {channel_name}.mp4",
     "max_log_entries": 1000,
     "metadata_log": "/mnt/user/media/tubearchivist/renamed_files.log"
   }
